feat: Added forms

--- a/pages/login/login_coordenador.html
+++ b/pages/login/login_coordenador.html
@@ -4,19 +4,26 @@
         <title>Login: Coordenador</title>
         <link rel="stylesheet" href="../../assets/css/login_items.css">
     </head>
+
     <body>
         <header>
         </header>
         <section class="login-form">
-            <form action="../../index.html">
+            <form action="../../index-coordenador.html">
                 <div class="col">
-                    <label>Usuário</label>
-                    <input>
-                    <label>Senha</label>
-                    <input>
-                    <button type="submit">Enviar</button>
+                    <label>Usuário
+                        <input>
+                    </label>
+                    <label>Senha
+                        <input>
+                    </label>
+                    <label>
+                        <button type="submit">Enviar</button>
+                    </label>
                 </div>
+                <a href="./login_usuario.html">Entrar como Usuario</a>
             </form>
         </section>
     </body>
+
 </html>
