--- a/pages/login/login_usuario.html
+++ b/pages/login/login_usuario.html
@@ -8,14 +8,19 @@
         <header>
         </header>
         <section class="login-form">
-            <form action="../../index.html">
+            <form action="../../index-usuario.html">
                 <div class="col">
-                    <label>Usuário</label>
-                    <input>
-                    <label>Senha</label>
-                    <input>
-                    <button type="submit">Enviar</button>
+                    <label>Usuário
+                        <input>
+                    </label>
+                    <label>Senha
+                        <input>
+                    </label>
+                    <label>
+                        <button type="submit">Enviar</button>
+                    </label>
                 </div>
+                <a href="./login_coordenador.html">Entrar como coordenador</a>
             </form>
         </section>
     </body>
