fix: User pages integration

--- a/pages/solicitacoes/usuario/nova.html
+++ b/pages/solicitacoes/usuario/nova.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../../assets/css/base-items.css">
-    <link rel="stylesheet" href="../../assets/css/dropdown-w3c.css">
+    <link rel="stylesheet" href="../../../assets/css/base-items.css">
+    <link rel="stylesheet" href="../../../assets/css/dropdown-w3c.css">
 </head>
 
 <body>
     <header>
         <ul class="menu">
-            <li><a href="../../index-usuario.html">Inicio</a></li>
+            <li><a href="../../../index-usuario.html">Inicio</a></li>
         </ul>
         <ul class="menu">
             <li><a href="">Nova chamada</a></li>
@@ -18,12 +18,12 @@
             <button class="dropbtn">Usuario</button>
             <div class="dropdown-content">
                 <p>Fulano de Tal</p>
-                <a href="../../pages/login/login_usuario.html">Logout</a>
+                <a href="../../login/login_usuario.html">Logout</a>
             </div>
         </div>
     </header>
     <section class="center-view">
-        <form action="./usuario/acompanhar-2.html">
+        <form action="./acompanhar-2.html">
             <ul>
                 <li>
                     <label>
