fix: Coord pages integration

--- a/pages/solicitacoes/coordenador/listar.html
+++ b/pages/solicitacoes/coordenador/listar.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="../../assets/css/base-items.css">
-        <link rel="stylesheet" href="../../assets/css/dropdown-w3c.css">
+        <link rel="stylesheet" href="../../../assets/css/base-items.css">
+        <link rel="stylesheet" href="../../../assets/css/dropdown-w3c.css">
     </head>
     <body>
         <header>
             <ul class="menu">
-                <li><a href="../../index-coordenador.html">Inicio</a></li>
+                <li><a href="../../../index-coordenador.html">Inicio</a></li>
             </ul>
             <ul class="menu">
                 <li><a href="">Ver chamadas</a></li>
@@ -16,7 +16,7 @@
                 <button class="dropbtn">Coordenador</button>
                 <div class="dropdown-content">
                     <p>Ficticio da Silva</p>
-                    <a href="../../pages/login/login_coordenador.html">Logout</a>
+                    <a href="../../../pages/login/login_coordenador.html">Logout</a>
                 </div>
               </div>
             </header>
@@ -31,7 +31,7 @@
                         <th>Status</th>
                     </tr>
                     <tr>
-                        <td><a href="./coordenador/acompanhar-1.html">#1</a></td>
+                        <td><a href="acompanhar-1.html">#1</a></td>
                         <td>Siclano de Fulano</td>
                         <td>Desenvolvimento Frontend 1</td>
                         <td><a target="_blank" href="https://classroom.google.com/c/NDc5NTYxNjM5NDIy/a/NTIwNzQwOTcyNzEw/details">Link Classroom</a></td>
@@ -39,7 +39,7 @@
                         <td>Em analise</td>
                     </tr>
                     <tr>
-                        <td><a href="./coordenador/acompanhar-2.html">#2</a></td>
+                        <td><a href="acompanhar-2.html">#2</a></td>
                         <td>Fulano de Tal</td>
                         <td>Desenvolvimento Frontend 1</td>
                         <td><a target="_blank" href="https://classroom.google.com/c/NDc5NTYxNjM5NDIy/a/NTIwNzQwOTcyNzEw/details">Link Classroom</a></td>
