fix: Index pages integration

--- a/index-coordenador.html
+++ b/index-coordenador.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <ul class="menu">
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="index-coordenador.html">Inicio</a></li>
             </ul>
             <ul class="menu">
                 <li><a href="pages/solicitacoes/coordenador/listar.html">Ver chamadas</a></li>
