--- a/index-usuario.html
+++ b/index-usuario.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <ul class="menu">
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="index-usuario.html">Inicio</a></li>
             </ul>
             <ul class="menu">
                 <li><a href="pages/solicitacoes/usuario/nova.html">Nova chamada</a></li>
