feat: Added inputs placeholders

--- a/pages/solicitacoes/usuario/nova.html
+++ b/pages/solicitacoes/usuario/nova.html
@@ -28,8 +28,8 @@
             <ul>
                 <li>
                     <label>
-                        <p>Aluno (Nome completo)</p>
-                        <input required>
+                        <p>Aluno</p>
+                        <input required placeholder="Nome Completo">
                     </label>
                 </li>
             </ul>
@@ -37,7 +37,7 @@
                 <li>
                     <label>
                         <p>Matéria</p>
-                        <input required>
+                        <input required placeholder="Nome da disciplina">
                     </label>
                 </li>
             </ul>
@@ -45,7 +45,7 @@
                 <li>
                     <label>
                         <p>Link atividade classroom</p>
-                        <input required>
+                        <input required placeholder="Link ou identificação da atividade">
                     </label>
                 </li>
             </ul>
