fix: Headers divergency

--- a/pages/solicitacoes/usuario/nova.html
+++ b/pages/solicitacoes/usuario/nova.html
@@ -23,7 +23,7 @@
             </div>
         </div>
     </header>
-    <section class="center-view">
+    <section class="form">
         <form action="./acompanhar-2.html">
             <ul>
                 <li>
