--- a/index-usuario.html
+++ b/index-usuario.html
@@ -3,6 +3,7 @@
     <head>
         <link rel="stylesheet" href="assets/css/base-items.css">
         <link rel="stylesheet" href="assets/css/dropdown-w3c.css">
+        <!-- <link rel="stylesheet" href="assets/css/form-items.css"> -->
     </head>
     <body>
         <header>
